// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`$host: supports simple rules 1`] = `
{
  "classNames": [],
  "stylesheets": [
    ":host{font-size:16px;}",
    ":host{line-height:1.5;}",
    ":host{color:rgb(60,60,60);}",
  ],
}
`;

exports[`$host: supports custom props 1`] = `
{
  "classNames": [],
  "stylesheets": [
    ":host{--customColor:red;}",
    ":host{--custom-color:red;}",
  ],
}
`;

exports[`$host: supports pseudo-classes 1`] = `
{
  "classNames": [],
  "stylesheets": [
    ":host{background-color:lightblue;}",
    ":host{:hover{background-color:blue;}}",
    ":host{:active{background-color:darkblue;}}",
  ],
}
`;

exports[`$host: supports pseudo-elements 1`] = `
{
  "classNames": [],
  "stylesheets": [
    ":host{::placeholder{color:#999;}}",
  ],
}
`;

exports[`$host: supports media query 1`] = `
{
  "classNames": [],
  "stylesheets": [
    ":host{width:800;}",
    ":host{@media (max-width: 800px){width:100%;}}",
    ":host{@media (min-width: 1540px){width:1366;}}",
  ],
}
`;

exports[`$host: supports complex rules 1`] = `
{
  "classNames": [],
  "stylesheets": [
    ":host{color:var(--blue-link);}",
    ":host(:hover){@media (hover: hover){color:scale(1.1);}}",
    ":host(:active){color:scale(0.9);}",
  ],
}
`;

exports[`$host: works with h via spread operator 1`] = `
{
  "$": "🦄",
  "html": [
    "<button ",
    ">",
    "</button>",
  ],
  "scale": "rel",
  "stylesheets": [
    ":host{color:red;}",
    ":host{[part="S1"]{color:blue;}}",
    ":host{color:var(--blue-link);}",
    ":host(:hover){@media (hover: hover){color:scale(1.1);}}",
    ":host(:active){color:scale(0.9);}",
  ],
}
`;
